Feature/sbmvp 84 company details (#10)
* SBMVP-84 Company Details WIP

- fixed a couple of spelling issues in the yml
- aligned Company object with yml

* SBMVP-84 fixing ut

* SBMVP-84 - WIP

* Building structure for company details view
* Switched out Contact model for something made more sense contextually
* Added material-icons until we have a final direction
* removing tslint component-selector rule for now since it’s not letting me commit files adhering to the rule

* SBMVP-84 - WIP

Few things that didn’t go through in last commit

* SBMVP-84 - WIP

More linter issues

* SBMVP-84 removing old tests

* SBMVP-84 - WIP

* installed kendo chart module, RUN NPM INSTALL
* modified swagger to include BoardMember
* View for company info

* SBMVP-84 - WIP

* removed slideoutmodule from company info module since it’s in shared module

* SBMVP-84 - WIP

* moved company detail feature to company info under slideout
* minor changes to yaml
* adding company info specific data to db

* Fixing Directives module issue
